Fix spacing on FAQ page

--- a/css/faq.css
+++ b/css/faq.css
@@ -5,6 +5,8 @@
 	padding: 20px;
 	position: relative;
 	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
 .faq-header-img{
